<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.m946</groupId>
	<artifactId>mvvmfxsample</artifactId>
	<version>0.1</version>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<mainClass>org.m946.mvvmfxsample.Starter</mainClass>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>17.0.2</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>15</version>
		</dependency>
		<dependency>
			<groupId>de.saxsys</groupId>
			<artifactId>mvvmfx</artifactId>
			<version>1.8.0</version>
		</dependency>
		<!-- Database Access -->
		<dependency>
			<groupId>org.firebirdsql.jdbc</groupId>
			<artifactId>jaybird</artifactId>
			<version>4.0.2.java11</version>
		</dependency>
		<!-- sfm-jdbc のartifactId を変更しないこと-->
		<dependency>
			<groupId>org.simpleflatmapper</groupId>
			<artifactId>sfm-jdbc-jre9</artifactId>
			<version>8.2.3</version>
		</dependency>
		<!-- End of Database Access -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
		</dependency>
		<!-- Logging -->
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.2.9</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-core</artifactId>
			<version>1.2.9</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.30</version>
		</dependency>
		<!-- End of Logging -->
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>15</release>
					<compilerArgs>
						<arg>--add-exports=javafx.graphics/com.sun.javafx.application=org.m946.mvvmfxsample</arg>
					</compilerArgs>

				</configuration>
			</plugin>
			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.5</version>
				<configuration>
					<mainClass>${mainClass}</mainClass>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>